Fix settings text wrap

--- a/src/components/Settings.scss
+++ b/src/components/Settings.scss
@@ -13,7 +13,8 @@
   }
   span.option,
   span.value {
-    width: 10rem;
+    min-width: 9rem;
+    flex-wrap: nowrap;
   }
   span.option {
     text-align: right;
